packages/gaist/examples/invalid/missing-semicolon.gaist
// Missing semicolon in state declaration
state {
  count = 0
  name = "test";
}

logic {
  function test() {
    count = 1;
  }
} 